mudança tela inicial imagem fundo, identação do arquivo

--- a/components/educacao/educacao.html
+++ b/components/educacao/educacao.html
@@ -1,108 +1,214 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="educacao.css"/>
+    <link rel="stylesheet" type="text/css" href="educacao.css" />
     <title>Acessibilidade Digital</title>
 </head>
-    <body>
-        <div>
-            <header>
-                <nav>
-                    <ul class="container-nav-list">
-                        <li><a href="/components/home/home.html" class="nav-item">Home</a></li>
-                        <li><a href="/components/educacao/educacao.html" class="nav-item">Educação</a></li>
-                        <li><a href="/components/fale-conosco/fale-conosco.html" class="nav-item">Fale Conosco</a></li>
-                    </ul>
-                </nav>  
-            </header>
-            <div class="container-conteudo">
-                <main class="text-intro color-blue ">
-                    <h2>Acessibilidade digital</h2>
-                
-                    <p class="line-height-max">Acessibilidade digital pode ser considerada como um conjunto de recursos 
-                        e medidas que possibilitam a navegação, a compreensão e a interação de qualquer pessoa na internet,
-                        independentemente de condição e sem ajuda de ninguém.
-                    <br>
-                    Segundo o IBGE, o Brasil possui mais de 17 milhões de pessoas com deficiência. Isso sem considerar as 
-                        que possuem outros tipos de limitação. É muita gente! Sendo assim, é preciso falar mais sobre acessibilidade digital. 
-                        Acontece que, ao projetar um site, muitos ainda cometem o erro de associar
-                        acessibilidade apenas a ambientes físicos, esquecendo-se de que os meios digitais também precisam ser acessíveis.</p>
-                </main>
-            </div>
-            <div class="container-conteudo um">
-                <section class="text-intro">
-                    <h2>Qual é a importância da acessibilidade digital</h2>
-                    <p class="line-height-max">Para se ter uma noção da importância da acessibilidade digital, 
-                        vejamos alguns números referente ao acesso à internet no Brasil:
-                        Segundo dados do Censo 2000, 80 milhões de brasileiros possuem acesso a 
-                        internet, sendo que mais de 16 milhões são deficientes visuais.
-                        31% navegam a uma velocidade lenta, de até 512 Kbps, revelou um estudo da 
-                        The Nielsen Company, sobre o uso e qualidade das conexões de banda larga.
-                        Para acessar a internet, 40% da população brasileira utiliza smartphones, 
-                        segundo estudo da IAB Brasil
-                    </p>
-                </section>  
-            </div>
-            <div class="container-conteudo-max">
-                <section class="text-intro color-blue">
-                    <h2>Princípios básicos para um projeto web mais acessível</h2>
-                    <p class="line-height-max mb-3">A W3C (Consórcio Internacional que desenvolve padrões para a Web), criou critérios que fazem parte do WCAG (Web Content Accessibility Guidelines) para
-                        orientar como os projetos web devem ser desenvolvidos, a fim de tornar o conteúdo mais acessível pelos usuários em geral.
-                        Entre os critérios apresentados estão, adicionar legenda em vídeos, incluir texto alternativo em imagens, 
-                        usar cores adequadas para que o conteúdo apresentado seja legível.
-                        Para desenvolver um projeto web que ofereça acessibilidade, é preciso atender a quatro 
-                        princípios básicos:
-                    </p>
 
-                    <ul>
-                        <li>
-                            <h5 class="mb-3">Percepção</h5>
-                            <p class="line-height-md mb-3">Os projetos devem permitir que os usuários sejam capazes de notar o 
-                                conteúdo de que está sendo apresentado, sem qualquer dificuldade.
-                            </p>
-                        </li>
-                        <li>
-                            <h5 class="mb-3">Funcionamento</h5>
-                            <p class="line-height-md mb-3">Ao desenvolver um projeto para web é preciso estudar como os usuários 
-                                vão operar os componentes da interface bem como  navegar no site, 
-                                para que esta tarefa seja realizada de forma simples e intuitiva.
-                            </p>
-                        </li>
-                        <li>
-                            <h5 class="mb-3">Compreensão</h5>
-                            <p class="line-height-md mb-3">É necessário compreender a informação que está sendo passada e 
-                                conseguir operar a interface.
-                            </p>
-                        </li>
-                        <li>
-                            <h5 class="mb-3">Robustez</h5>
-                            <p class="line-height-md mb-3"> O projeto web deve ser acessível em antigas e novas tecnologias, 
-                                de forma que os usuários entendam o que está sendo apresentado.
-                            </p>
-                        </li>
-                    </ul>
-                </section>  
+<body>
+    <header class="header">
+        <nav>
+            <ul class="container-nav-list">
+                <li><a href="/components/home/home.html" class="nav-item">Home</a></li>
+                <li><a href="/components/educacao/educacao.html" class="nav-item">Educação</a></li>
+                <li><a href="/components/fale-conosco/fale-conosco.html" class="nav-item">Fale Conosco</a></li>
+            </ul>
+        </nav>
+    </header>
+    <div class="container-conteudo">
+        <main class="text-intro color-blue ">
+            <h2>Acessibilidade digital</h2>
+
+            <p class="line-height-max">Acessibilidade digital pode ser considerada como um conjunto de recursos
+                e medidas que possibilitam a navegação, a compreensão e a interação de qualquer pessoa na internet,
+                independentemente de condição e sem ajuda de ninguém.
+                <br>
+                Segundo o IBGE, o Brasil possui mais de 17 milhões de pessoas com deficiência. Isso sem considerar as
+                que possuem outros tipos de limitação. É muita gente! Sendo assim, é preciso falar mais sobre
+                acessibilidade digital.
+                Acontece que, ao projetar um site, muitos ainda cometem o erro de associar
+                acessibilidade apenas a ambientes físicos, esquecendo-se de que os meios digitais também precisam ser
+                acessíveis.
+            </p>
+        </main>
+    </div>
+    <div class="container-conteudo um">
+        <section class="text-intro">
+            <h2>Qual é a importância da acessibilidade digital</h2>
+            <p class="line-height-max">Para se ter uma noção da importância da acessibilidade digital,
+                vejamos alguns números referente ao acesso à internet no Brasil:
+                Segundo dados do Censo 2000, 80 milhões de brasileiros possuem acesso a
+                internet, sendo que mais de 16 milhões são deficientes visuais.
+                31% navegam a uma velocidade lenta, de até 512 Kbps, revelou um estudo da
+                The Nielsen Company, sobre o uso e qualidade das conexões de banda larga.
+                Para acessar a internet, 40% da população brasileira utiliza smartphones,
+                segundo estudo da IAB Brasil
+            </p>
+        </section>
+    </div>
+    <div class="container-conteudo-max">
+        <section class="text-intro color-blue">
+            <h2>Princípios básicos para um projeto web mais acessível</h2>
+            <p class="line-height-max mb-3">A W3C (Consórcio Internacional que desenvolve padrões para a Web), criou
+                critérios que fazem parte do WCAG (Web Content Accessibility Guidelines) para
+                orientar como os projetos web devem ser desenvolvidos, a fim de tornar o conteúdo mais acessível pelos
+                usuários em geral.
+                Entre os critérios apresentados estão, adicionar legenda em vídeos, incluir texto alternativo em
+                imagens,
+                usar cores adequadas para que o conteúdo apresentado seja legível.
+                Para desenvolver um projeto web que ofereça acessibilidade, é preciso atender a quatro
+                princípios básicos:
+            </p>
+
+            <ul>
+                <li>
+                    <h5 class="mb-3">Percepção</h5>
+                    <p class="line-height-md mb-3">Os projetos devem permitir que os usuários sejam capazes de notar o
+                        conteúdo de que está sendo apresentado, sem qualquer dificuldade.
+                    </p>
+                </li>
+                <li>
+                    <h5 class="mb-3">Funcionamento</h5>
+                    <p class="line-height-md mb-3">Ao desenvolver um projeto para web é preciso estudar como os usuários
+                        vão operar os componentes da interface bem como navegar no site,
+                        para que esta tarefa seja realizada de forma simples e intuitiva.
+                    </p>
+                </li>
+                <li>
+                    <h5 class="mb-3">Compreensão</h5>
+                    <p class="line-height-md mb-3">É necessário compreender a informação que está sendo passada e
+                        conseguir operar a interface.
+                    </p>
+                </li>
+                <li>
+                    <h5 class="mb-3">Robustez</h5>
+                    <p class="line-height-md mb-3"> O projeto web deve ser acessível em antigas e novas tecnologias,
+                        de forma que os usuários entendam o que está sendo apresentado.
+                    </p>
+                </li>
+            </ul>
+        </section>
+    </div>
+    <div class="container-conteudo um">
+        <section class="text-intro">
+            <h2>Boas práticas no mundo digital para torná-lo mais acessível</h2>
+            <div class="row">
+                <iframe class="video" src="https://www.youtube.com/embed/dxqDNNZKMhs"
+                    title="YouTube video player sobre boas práticas no mundo digital para torná-lo mais acessível"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen>
+                </iframe>
             </div>
-            <div class="container-conteudo um">
-                <section class="text-intro">
-                    <h2>Boas práticas no mundo digital para torná-lo mais acessível</h2>
-                    <div class="row">
-                         <iframe class="video"  src="https://www.youtube.com/embed/dxqDNNZKMhs" 
-                         title="YouTube video player sobre boas práticas no mundo digital para torná-lo mais acessível"  
-                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-                         allowfullscreen>
-                        </iframe>
-                    </div> 
-                </section>
+        </section>
+    </div>
+    <div class="container-footer">
+        <footer class="box-footer">
+            <h3><a href="/components/fale-conosco/fale-conosco.html">Fale Conosco</a></h3>
+        </footer>
+    </div>
+    <header>
+        <nav>
+            <ul class="container-nav-list">
+                <li><a href="/components/home/home.html" class="nav-item">Home</a></li>
+                <li><a href="/components/educacao/educacao.html" class="nav-item">Educação</a></li>
+                <li><a href="/components/fale-conosco/fale-conosco.html" class="nav-item">Fale Conosco</a></li>
+            </ul>
+        </nav>
+    </header>
+    <div class="container-conteudo">
+        <main class="text-intro color-blue ">
+            <h2>Acessibilidade digital</h2>
+
+            <p class="line-height-max">Acessibilidade digital pode ser considerada como um conjunto de recursos
+                e medidas que possibilitam a navegação, a compreensão e a interação de qualquer pessoa na internet,
+                independentemente de condição e sem ajuda de ninguém.
+                <br>
+                Segundo o IBGE, o Brasil possui mais de 17 milhões de pessoas com deficiência. Isso sem considerar as
+                que possuem outros tipos de limitação. É muita gente! Sendo assim, é preciso falar mais sobre
+                acessibilidade digital.
+                Acontece que, ao projetar um site, muitos ainda cometem o erro de associar
+                acessibilidade apenas a ambientes físicos, esquecendo-se de que os meios digitais também precisam ser
+                acessíveis.</p>
+        </main>
+    </div>
+    <div class="container-conteudo um">
+        <section class="text-intro">
+            <h2>Qual é a importância da acessibilidade digital</h2>
+            <p class="line-height-max">Para se ter uma noção da importância da acessibilidade digital,
+                vejamos alguns números referente ao acesso à internet no Brasil:
+                Segundo dados do Censo 2000, 80 milhões de brasileiros possuem acesso a
+                internet, sendo que mais de 16 milhões são deficientes visuais.
+                31% navegam a uma velocidade lenta, de até 512 Kbps, revelou um estudo da
+                The Nielsen Company, sobre o uso e qualidade das conexões de banda larga.
+                Para acessar a internet, 40% da população brasileira utiliza smartphones,
+                segundo estudo da IAB Brasil
+            </p>
+        </section>
+    </div>
+    <div class="container-conteudo-max">
+        <section class="text-intro color-blue">
+            <h2>Princípios básicos para um projeto web mais acessível</h2>
+            <p class="line-height-max mb-3">A W3C (Consórcio Internacional que desenvolve padrões para a Web), criou
+                critérios que fazem parte do WCAG (Web Content Accessibility Guidelines) para
+                orientar como os projetos web devem ser desenvolvidos, a fim de tornar o conteúdo mais acessível pelos
+                usuários em geral.
+                Entre os critérios apresentados estão, adicionar legenda em vídeos, incluir texto alternativo em
+                imagens,
+                usar cores adequadas para que o conteúdo apresentado seja legível.
+                Para desenvolver um projeto web que ofereça acessibilidade, é preciso atender a quatro
+                princípios básicos:
+            </p>
+
+            <ul>
+                <li>
+                    <h5 class="mb-3">Percepção</h5>
+                    <p class="line-height-md mb-3">Os projetos devem permitir que os usuários sejam capazes de notar o
+                        conteúdo de que está sendo apresentado, sem qualquer dificuldade.
+                    </p>
+                </li>
+                <li>
+                    <h5 class="mb-3">Funcionamento</h5>
+                    <p class="line-height-md mb-3">Ao desenvolver um projeto para web é preciso estudar como os usuários
+                        vão operar os componentes da interface bem como navegar no site,
+                        para que esta tarefa seja realizada de forma simples e intuitiva.
+                    </p>
+                </li>
+                <li>
+                    <h5 class="mb-3">Compreensão</h5>
+                    <p class="line-height-md mb-3">É necessário compreender a informação que está sendo passada e
+                        conseguir operar a interface.
+                    </p>
+                </li>
+                <li>
+                    <h5 class="mb-3">Robustez</h5>
+                    <p class="line-height-md mb-3"> O projeto web deve ser acessível em antigas e novas tecnologias,
+                        de forma que os usuários entendam o que está sendo apresentado.
+                    </p>
+                </li>
+            </ul>
+        </section>
+    </div>
+    <div class="container-conteudo um">
+        <section class="text-intro">
+            <h2>Boas práticas no mundo digital para torná-lo mais acessível</h2>
+            <div class="row">
+                <iframe class="video" src="https://www.youtube.com/embed/dxqDNNZKMhs"
+                    title="YouTube video player sobre boas práticas no mundo digital para torná-lo mais acessível"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen>
+                </iframe>
             </div>
-            <div class="container-footer">
-                <footer class="box-footer">
-                    <h3><a href="/components/fale-conosco/fale-conosco.html">Fale Conosco</a></h3>
-                </footer>
-            </div>
-        </div>
-    </body>
+        </section>
+    </div>
+    <div class="container-footer">
+        <footer class="box-footer">
+            <h3><a href="/components/fale-conosco/fale-conosco.html">Fale Conosco</a></h3>
+        </footer>
+    </div>
+</body>
+
 </html>
