--- a/components/fale-conosco/fale-conosco.css
+++ b/components/fale-conosco/fale-conosco.css
@@ -82,23 +82,7 @@ a.link-conteudo {
     margin: 16px 24px;
 }
 
-.img-bg {
-    background-image: url('https://static.whow.com.br/wp-content/uploads/2020/11/acessibilidade-digital-1.jpg');
-    background-repeat: no-repeat;
-    background-size: 100% 50vh;
-    background-position: center;
-    width: 100%;
-    height: 50vh;
-    background-color: rgba(70,121,4,255);
-    border-image-slice: fill;
-
-}
-
-.invisible{
-    visibility: hidden;
-}
-
-.bg-form {
+div.bg-form {
     height: 200vh;
     width: 100%;
     background-image: url("/assets/bg-form.jpg");
@@ -144,23 +128,23 @@ input{
 }
 
 
-.input-text{
+input.input-text{
     width: 100%;
 }
 
-.input-sexo:hover, .input-sexo:focus {
+input.input-sexo:hover, .input-sexo:focus {
     background-image: url("/assets/60995.png");
     background-repeat: no-repeat;
     background-position: 95%;
     background-size: 8%;
 }
 
-.input-sexo {
+input.input-sexo {
     height: 100%;
     padding-right: 5px;
 }
 
-.text-area{
+input.text-area{
     height: 10em;
     border: 0;
     border-radius: 5px;
