--- a/components/educacao/educacao.css
+++ b/components/educacao/educacao.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 
-header {
+header.header{
     padding: 15px 8px;
 }
 
@@ -53,8 +53,6 @@ a {
     
 }
 
-
-
 .line-height-max{
     line-height: 3.5rem;
 }
@@ -79,7 +77,7 @@ h5{
     font-size: 1.8rem;
 }
 
-h2 {
+h2{
     font-size: 2em;
     margin-bottom: 0.5em;
     text-transform: uppercase;
