--- a/components/home/home.css
+++ b/components/home/home.css
@@ -1,4 +1,4 @@
-*{
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
@@ -28,72 +28,88 @@ ul li {
 }
 
 a {
-    display: block;
     text-decoration: none;
 }
 
-.nav-item {
+a.nav-item {
+    display: block;
     padding: 4px 20px !important;
     font-size: 1.4em;
     font-weight: 600;
-    
 }
 
-.container-conteudo{
+div.container-conteudo {
     height: 90vh;
     width: 100%;
     background-color: #f6eee1;
     color: #2d2351;
+    display: flex;
+    flex: 1 3;
 }
 
-.box-text {
+img.img {
+    width: 100%;
+    padding: 2em;
+}
+
+.container-img {
+    display: flex;
+    align-items: bottom;
+    margin-left: auto;
+}
+
+section.box-text {
     line-height: 3.3em;
-    width: 50%;
     margin: 0 auto;
-    padding: 8%;
+    padding: 4em;
+    position: absolute;
+    width: 50%;
 }
 
-h1 {
+h1.titulo {
     font-size: 4.2em;
     margin-bottom: 0.5em;
     text-transform: uppercase;
+    text-align: center;
 }
 
-p {
+p.paragraph {
     font-size: 2em;
+    text-indent: 1rem;
+    text-align: justify;
 }
 
-div.box-link{
+div.box-link {
     display: flex;
     justify-content: end;
 }
 
 a.link-conteudo {
-    color:#00b1a1;
+    color: #00b1a1;
     font-size: 1.5em;
 }
 
 
-.container-footer {
+div.container-footer {
     background-color: #ffffff;
 }
 
-.box-footer {
+footer.box-footer {
     margin: 16px 24px;
 }
 
-.img-bg {
+figure.img-bg {
     background-image: url('https://static.whow.com.br/wp-content/uploads/2020/11/acessibilidade-digital-1.jpg');
     background-repeat: no-repeat;
     background-size: 100% 50vh;
     background-position: center;
     width: 100%;
     height: 50vh;
-    background-color: rgba(70,121,4,255);
+    background-color: rgba(70, 121, 4, 255);
     border-image-slice: fill;
 
 }
 
-.invisible{
+.invisible {
     visibility: hidden;
 }
