--- a/components/educacao/educacao.css
+++ b/components/educacao/educacao.css
@@ -1,50 +1,7 @@
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-}
-
-header.header{
-    padding: 15px 8px;
-}
-
-body {
-    font-family: 'Raleway', 'LemonSans-Light', Arial, Helvetica, sans-serif;
-}
-
-ul.container-nav-list {
-    display: flex;
-    flex-wrap: nowrap;
-    justify-content: end;
-    padding: 4px 8px;
-}
-
-ul {
-    list-style-type: none;
-}
-
-ul li {
-    display: inline;
-}
-
-a {
-    display: block;
-    text-decoration: none;
-}
-
-.nav-item {
-    padding: 4px 20px !important;
-    font-size: 1.4em;
-    font-weight: 600;
-    
-}
-
 .container-conteudo{
     height: 100vh;
     max-height: 100vh;
-    width: 100%;
-    background-color: #f6eee1;
-    
+    width: 100%;  
 }
 
 .container-list {
@@ -53,11 +10,7 @@ a {
     
 }
 
-.line-height-max{
-    line-height: 3.5rem;
-}
-
-.um {
+.bg-orange {
     background-color: #fad2a1;
 }
 
@@ -67,28 +20,29 @@ a {
     background-color: #f6eee1;
 }
 
+.text-customize{
+    line-height: 2em;
+    font-size: 1em;
+}
+
 .text-intro {
     width: 66.6%;
     margin: 0 auto;
-    padding: 5% 0 ;
+    padding: 6em 0 ;
 }
 
-h5{
-    font-size: 1.8rem;
+h5.subtitle{
+    font-size: 1.4em;
 }
 
-h2{
-    font-size: 2em;
+h2.title{
+    font-size: 1.8em;
     margin-bottom: 0.5em;
     text-transform: uppercase;
     text-align: center;
     margin-bottom: 32px;
 }
 
-p {
-    font-size: 1.4rem;
-    line-height: 2rem;
-}
 
 div.box-link{
     display: flex;
@@ -110,28 +64,9 @@ a.link-conteudo {
     height: 10vh;
 }
 
-.color-blue {
-    color: #2d2351;
-}
-
-.mb-3{
-    margin-bottom: 16px;
-}
-
-.line-height-md  {
-    line-height: 2.5rem;
-}
-
 .video{
     width:560px; 
     height:315px;
     margin: 0 auto;
     border: 0;
-}
-
-.row{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
 }
