--- a/components/fale-conosco/fale-conosco.css
+++ b/components/fale-conosco/fale-conosco.css
@@ -4,46 +4,11 @@
     box-sizing: border-box;
 }
 
-header {
-    padding: 15px 8px;
-}
-
-body {
-    font-family: 'Raleway', 'LemonSans-Light', Arial, Helvetica, sans-serif;
-}
-
-ul.container-nav-list {
-    display: flex;
-    flex-wrap: nowrap;
-    justify-content: end;
-    padding: 4px 8px;
-}
-
-ul {
-    list-style-type: none;
-}
-
-ul li {
-    display: inline;
-}
-
-a {
-    display: block;
-    text-decoration: none;
-}
-
-.nav-item {
-    padding: 4px 20px !important;
-    font-size: 1.4em;
-    font-weight: 600;
-    
-}
-
 .container-conteudo{
-    height: 90vh;
     width: 100%;
     background-color: #f6eee1;
     color: #2d2351;
+    border-collapse: collapse;
 }
 
 .box-text {
@@ -53,15 +18,6 @@ a {
     padding: 8%;
 }
 
-h1 {
-    font-size: 4.2em;
-    margin-bottom: 0.5em;
-    text-transform: uppercase;
-}
-
-p {
-    font-size: 2em;
-}
 
 div.box-link{
     display: flex;
@@ -74,16 +30,8 @@ a.link-conteudo {
 }
 
 
-.container-footer {
-    background-color: #ffffff;
-}
-
-.box-footer {
-    margin: 16px 24px;
-}
 
 div.bg-form {
-    height: 200vh;
     width: 100%;
     background-image: url("/assets/bg-form.jpg");
     background-size: 120% 100%;
@@ -92,14 +40,12 @@ div.bg-form {
     opacity: 1;
 }
 
-table.conteudo-form {
+.conteudo-form {
     opacity: 1;
-    margin: auto auto;
-    width: 50%;
     background-color: #00b1a1;
     opacity: 0.9;
-    padding: 2em;
     border-radius: 5px;
+    border: 0;
 }
 
 .pb-2 {
@@ -119,15 +65,6 @@ td.container-label {
     max-width: 162px;
 }
 
-input{
-    border: 0;
-    font-size: 0.725rem;
-    padding: 4px 4px;
-    margin: 0 4px;  
-    border-radius: 2px;
-}
-
-
 input.input-text{
     width: 100%;
 }
@@ -144,10 +81,12 @@ input.input-sexo {
     padding-right: 5px;
 }
 
-input.text-area{
+textarea.text-area{
     height: 10em;
     border: 0;
     border-radius: 5px;
+    width: 100%;
+    padding: 8px;
 }
 
 .align-items-left{
@@ -161,8 +100,26 @@ input.text-area{
     width: 100%;
 }
 
-.w-85{
-    width: 85%;
-    margin-right: auto;
+
+button.btn-limpar, button.btn-submit {
+    height: 35px;
+    width: 100px;
+    font-weight: 600;
+    border-radius: 5px;
+    outline: none;
+    border: 1px solid #ffffff;
+    background-color: transparent;
 }
 
+
+.btn-submit:hover {
+    background-color: rgb(12, 27, 95);
+    color: #ffff;
+    border: #0000;
+}
+
+.btn-limpar:hover {
+    background-color: rgb(74, 74, 77);
+    color: #ffff;
+    border: #0000;
+}
