--- a/components/inspiracao/inspiracao.html
+++ b/components/inspiracao/inspiracao.html
@@ -5,14 +5,14 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" type="text/css" href="home.css" />
+  <link rel="stylesheet" type="text/css" href="inspiracao.css" />
   <link rel="stylesheet" type="text/css" href="/components/style.css" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <title>Acessibilidade Digital</title>
 </head>
 
-<body class="container-fluid p-0">
+<body>
   <header class="row no-gutters p-0 mb-4">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
@@ -38,42 +38,36 @@
       </div>
     </nav>
   </header>
-  <div class="row mb-2 justify-content-between">
-    <section class="col-12 col-sm-7 px-4 py-2 py-md-4">
-      <h1 class="px-4 h1 text-center py-md-3">Educação </h1>
-      <p class="px-3 px-md-5 text-customize">
-        Entenda o que é acessibilidade digital.
-        A importância da criação de conteúdos acessíveis e
-        os princípios básicos para um projeto mais acessível.
-      </p>
-      <div class="row justify-content-end">
-        <div class="col-8 col-sm-7 col-md-5">
-          <a href="/components/educacao/educacao.html" class="h5 nav-link">Ler mais >></a>
-        </div>
-      </div>
-    </section>
-    <div class="col-5 d-flex align-items-end overflow-hidden">
-      <img class="img-customize touch" alt="pessoa cadeirante usando celular"
-        src="/assets/undraw_web_browsing_p-77-h.svg">
-    </div>
-  </div>
-
-  <div class="row no-gutters">
-    <div class="col-5 col-md-6 overflow-hidden px-0 bg-gold">
-      <img class="img-customize " alt="pessoa cadeirante usando celular" src="/assets/undraw_new_ideas_jdea.svg">
-    </div>
-    <section class="col-7 col-md-6 px-4 py-2 py-md-4 box-ideia">
-      <h1 class="px-4 h1 mt-5 center">Inspiração</h1>
-      <p class="px-3 px-md-5 text-customize">
-        Veja alguns sites e projetos que apoiam e implementam
-        conteúdos acessiveis.
-      </p>
-      <div class="row justify-content-end">
-        <div class="col-8">
-          <a href="/components/inspiracao/inspiracao.html" class="h5 nav-link">Ler mais >></a>
-        </div>
-      </div>
-    </section>
+  <div class="container-conteudo bg-green">
+    <main class="text-intro color-blue ">
+      <h2>Links inspiradores</h2>
+      <ul>
+        <li><a href="http://acessibilidadelegal.com/23-padroes-web.php"
+            class="line-height-max font-size-m text-red">Acessibilidade Legal - Acessibilidade na web -
+            Marco Antonio de Queiroz.</a>
+          <p>No site Acessibilidade legal, o autor Marcos Queiroz traz algumas dicas
+            de construção de sites acessíveis para uma vasta gama de público, como daltônicos, surdos,
+            pessoas com pouca destreza virtual,
+            etc. e traz também tecnologias desenvolvidas para a inclusão digital.
+          </p>
+        </li>
+        <li><a href="http://www.adeva.org.br/" class="line-height-max font-size-m text-red">ADEVA - Associação
+            de Deficientes Visuais e Amigos.</a>
+          <p>Adeva é a associação de deficientes visuais que presta serviços de desenvolvimento e adaptações
+            de sites
+            para ficarem acessíveis
+          </p>
+        </li>
+        <li><a href="https://dicasapple.com/novidades-de-acessibilidade-no-ios-13/"
+            class="line-height-max font-size-m text-red">Dicas Apple - O Mundo Apple Acessível para
+            Todos.</a>
+          <p>DicasApple.com envolve, além de dicas gerais do mundo iOS, tem conteúdo sobre as funções de
+            acessibilidade
+            entregues na versão do iOS 13.
+          </p>
+        </li>
+      </ul>
+    </main>
   </div>
   <footer class="bd-footer bg-light">
     <div class="container-fluid p-3 p-md-5 text-center">
@@ -94,9 +88,9 @@
           linkedlin + "</a></h6><h6 class='mt-1'>Sexo: " + sexo + "</h6><h6>Localização - polo: " + local + "</h6>");
       </script>
     </div>
+
   </footer>
-  
-  <script type="text/javascript" src="/components/global.js"></script>
+  <!-- <script type="text/javascript" src="/components/global.js"></script> -->
 </body>
 
 </html>
